--- a/composer.json
+++ b/composer.json
@@ -1,39 +1,52 @@
 {
   "name": "idiosyncratic/spiral-eventsauce-bridge",
-  "type": "library",
-  "license": "EUPL-1.2",
   "description": "Cycle Database Implementation for Eventsauce",
+  "license": "EUPL-1.2",
+  "type": "library",
   "homepage": "https://github.com/idiosyncratic-code/spiral-eventsauce-bridge",
   "support": {
     "source": "https://github.com/idiosyncratic-code/spiral-eventsauce-bridge"
   },
   "require": {
     "php": ">=8.4",
+    "cycle/database": "^2.15",
+    "cycle/migrations": "^4.2",
     "eventsauce/eventsauce": "^3.7",
     "eventsauce/id-encoding": "^1.0",
-    "eventsauce/uuid-encoding": "^1.0",
-    "ramsey/uuid": "^4.9"
+    "eventsauce/message-outbox": "^1.3",
+    "eventsauce/message-repository-table-schema": "^1.0",
+    "psr/container": "^2.0",
+    "ramsey/uuid": "^4.9",
+    "spiral/attributes": "^3.1",
+    "spiral/boot": "^3.16",
+    "spiral/config": "^3.16",
+    "spiral/core": "^3.16",
+    "spiral/tokenizer": "^3.16"
   },
+  "require-dev": {
+    "ergebnis/composer-normalize": "^2.48",
+    "idiosyncratic/coding-standard": "^3.0",
+    "php-parallel-lint/php-console-highlighter": "^1.0",
+    "php-parallel-lint/php-parallel-lint": "^1.3",
+    "phpstan/phpstan": "^1.10"
+  },
+  "suggest": {
+    "enqueue/enqueue": "Allows for asynchronous message dispatching via many queuing systems"
+  },
+  "minimum-stability": "dev",
+  "prefer-stable": true,
   "autoload": {
     "psr-4": {
       "Idiosyncratic\\Spiral\\EventSauceBridge\\": "src"
     }
   },
   "config": {
-    "sort-packages": true,
     "allow-plugins": {
       "dealerdirect/phpcodesniffer-composer-installer": true,
+      "ergebnis/composer-normalize": true,
       "phpstan/extension-installer": true
-    }
-  },
-  "scripts": {
-  },
-  "minimum-stability": "dev",
-  "prefer-stable": true,
-  "require-dev": {
-    "idiosyncratic/coding-standard": "^3.0",
-    "php-parallel-lint/php-parallel-lint": "^1.3",
-    "phpstan/phpstan": "^1.10",
-    "qossmic/deptrac-shim": "^1.0"
+    },
+    "lock": false,
+    "sort-packages": true
   }
 }
