test: fix phpstan errors
Implement PHPStan commit hook and fix errors to bring all code into compliance with current ruleset.

--- a/.lefthook.yml
+++ b/.lefthook.yml
@@ -4,3 +4,7 @@ pre-commit:
     phpcbf:
       run: phpcbf {staged_files}
       glob: "*.{php}"
+      stage_fixed: true
+    phpstan:
+      run: phpstan analyse
+      glob: "*.{php}"
