--- a/composer.json
+++ b/composer.json
@@ -9,17 +9,23 @@
   },
   "require": {
     "php": ">=8.4",
+    "ext-pcntl" : "*",
     "cycle/database": "^2.15",
     "cycle/migrations": "^4.2",
+    "enqueue/enqueue": "^0.10",
+    "enqueue/sns": "^0.10",
+    "enqueue/sqs": "^0.10",
     "eventsauce/eventsauce": "^3.7",
     "eventsauce/id-encoding": "^1.0",
     "eventsauce/message-outbox": "^1.3",
     "eventsauce/message-repository-table-schema": "^1.0",
     "psr/container": "^2.0",
+    "queue-interop/queue-interop": "^0.8",
     "ramsey/uuid": "^4.9",
     "spiral/attributes": "^3.1",
     "spiral/boot": "^3.16",
     "spiral/config": "^3.16",
+    "spiral/console": "^3.16",
     "spiral/core": "^3.16",
     "spiral/tokenizer": "^3.16"
   },
