--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -1,4 +1,10 @@
 parameters:
-    level: max
+    level: 5
     paths:
         - src
+    ignoreErrors:
+        -
+            identifier: argument.unknown
+            paths:
+                - src/Bootloader/CycleOutboxRepositoryBootloader.php
+                - src/Bootloader/OutboxRelayBootloader.php
